# Hubris

./: .gitignore  CMakeLists.txt  compile_commands.json  todo.md
.cache/clangd/index/: ParseError.cpp.58040ACF51B4926C.idx  ShorthandTypes.hpp.823E6DC490E1784F.idx  main.cpp.0D80F03906A58420.idx
Inspiration/: notes.md  nothing.ts  package-lock.json  package.json
Inspiration/Source/: src.js
Inspiration/babel-parser/: notes.md  test.js  tsconfig.json
Inspiration/babel-parser/src/: options.ts  types.ts
Inspiration/babel-parser/src/parser/: index.ts  statement.ts
Inspiration/babel-parser/src/tokenizer/: types.ts
Inspiration/lib/: src.js
Source/: main.cpp
Source/AST/: CMakeLists.txt
Source/AST/Private/: Types.cpp
Source/AST/Public/: Token.hpp  Types.hpp
Source/Parser/: CMakeLists.txt  notes.md
Source/Parser/Private/: Parser.cpp
Source/Parser/Public/: Options.hpp  Parser.hpp  Productions.hpp  State.hpp  Token.hpp
Source/Tokenizer/: CMakeLists.txt
Source/Tokenizer/Private/: Context.cpp  Token.cpp
Source/Tokenizer/Public/: Context.hpp  Token.hpp  Tokenizer.hpp
Tests/: main.cpp
Tests/Tokenizer/: Tests.hpp
Utils/: Construction.hpp  Enumerators.hpp  Options.hpp  Scope.hpp  ShorthandTypes.hpp  SourceLocation.hpp
